- Leistungseffizienztest
TODO:
- Test auf Wartbarkeit